DBZ-6017 Add support for header to all Debezium Server sinks
Add header support to http sink